# Tester-Haskell

./: LICENSE.txt  README.md  lame-tester.cabal  stack.yaml  tester.cabal
src/Tester/: Dialect.hs  RunSettings.hs  Suite.hs  TestRunSettings.hs
test/: Main.hs  UnitTests.hs
