Name:                lame-tester
Version:             1.2.1
Cabal-version:       >=1.22.0
License:             BSD3
License-File:        LICENSE.txt
Author:              Jason Bertsche
Maintainer:          jason.bertsche@gmail.com
Homepage:            http://github.com/TheBizzle
Category:            Demo
Synopsis:            A strange and unnecessary selective test-running library
Description:         A strange and unnecessary selective test-running library
Build-type:          Simple

source-repository head
  type:     git
  location: git@github.com:TheBizzle/Tester-Haskell.git

library
  hs-source-dirs:   src
  exposed-modules:  Tester.Dialect, Tester.RunSettings, Tester.Suite
  default-language: Haskell2010
  build-depends:
    base       >= 4.8   && < 5,
    bifunctors >= 5.4   && < 5.5,
    containers >= 0.5   && < 0.6,
    semigroups >= 0.18  && < 0.19,
    validation >= 0.5   && < 0.6
  GHC-Options:
    -Wall
    -fno-warn-name-shadowing

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  other-modules: UnitTests
  build-depends:
    base,
    containers,
    lame-tester,
    tasty       >= 0.11 && < 0.12,
    tasty-hunit >= 0.9  && < 0.10
