Name:                lame-tester
Version:             0.1
Cabal-version:       >=1.16.0
License:             BSD3
License-File:        LICENSE.txt
Author:              Jason Bertsche
Maintainer:          jason.bertsche@gmail.com
Homepage:            http://github.com/TheBizzle
Category:            Demo
Synopsis:            A strange and unnecessary selective test-running library
Build-type:          Simple

source-repository head
  type:     git
  location: git@github.com:TheBizzle/Tester-Haskell.git

library
  hs-source-dirs:   src
  exposed-modules:  Tester.Dialect, Tester.RunSettings, Tester.Suite
  default-language: Haskell2010
  build-depends:
    base       >= 4.6,
    containers >= 0.5,
    semigroups >= 0.9,
    validation >= 0.3

  GHC-Options: -Wall
               -fno-warn-name-shadowing
